--- a/keysi.html
+++ b/keysi.html
@@ -497,7 +497,7 @@
 
 			<div class="wrapper" style="display: flex; align-items: flex-end;">
 				<div class="heading" style="padding-bottom:2rem;">
-					<h1 class="inner_title-fz" style="font-weight:300;">Кейсы и бренды</h1>
+					<h1 class="inner_title-fz" style="font-weight:300;">Cases and brands</h1>
 					<h2 style="font-weight:300; font-size:1rem;">
 						<!--p>Есть такая работа, которую важно хранить в секрете</p-->
 					</h2>
@@ -531,7 +531,7 @@
 				<div class="flex_box">
 					<div class="b2_12">
 						<div class="heading">
-							Кейсы
+							Cases
 						</div>
 					</div>
 					<!--div class="b5_12">
@@ -555,8 +555,7 @@
 								<use xlink:href="#minus_circled"></use>
 							</svg>
 
-							<div class="accordeon_heading"><b>01</b> <b>Организация первого и второго международных
-									геологических форумов «Oil&Gas»</b></div>
+							<div class="accordeon_heading"><b>01</b> <b>Organization of the first and second international geological forums «Oil&Gas»</b></div>
 						</div>
 
 						<div class="b" style="display: none;">
@@ -564,14 +563,12 @@
 							<div class="bg_accordeon_mob mobile_only"></div>
 							<div class="half_width">
 								<div class="t" style="margin: 0 auto;">
-									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">История</p>
+									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">History</p>
 									<p style="background: #f7f7f7; border-radius: 4px; padding: 1rem;"><b
-											style="font-size:1rem; line-height: 120%;">Впервые мероприятие прошло в
-											марте 2015г. и объединило более 500 делегатов из 10 стран мира.
+											style="font-size:1rem; line-height: 120%;">The event was first held in March 2015, and brought together more than 500 delegates from 10 countries of the world.</b>
 									</p>
 									<img src="./assets/images/1-geolog.jpg" alt="">
-									<p>Форум прошел при участии Первых руководителей Министерств и Крупных
-										транснациональных компаний РК и зарубежья</p>
+									<p>The Forum was held with the participation of the First Heads of Ministries and Large Transnational Companies of the Republic of Kazakhstan and overseas.</p>
 									<img src="./assets/images/2-geolog.jpg" alt="">
 								</div>
 							</div>
@@ -586,8 +583,7 @@
 							<svg>
 								<use xlink:href="#minus_circled"></use>
 							</svg>
-							<div class="accordeon_heading"><b>02</b> <b>Сотрудничество с АО "Каспийский трубопроводный
-									консорциум-К"</b></div>
+							<div class="accordeon_heading"><b>02</b> <b>Cooperation with JSC "Caspian Pipeline Consortium-K“</b></div>
 						</div>
 
 						<div class="b">
@@ -597,12 +593,9 @@
 
 							<div class="half_width">
 								<div class="t">
-									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">История</p>
+									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">History</p>
 									<p style="background: #f7f7f7; border-radius: 4px; padding: 1rem;"><b
-											style="font-size:1rem; line-height: 120%;">Сотрудничество с АО "Каспийский
-											трубопроводный консорциум-К" Информационная поддержка, печать корпоративных
-											изданий, фото-видео обеспечение, продакшн и организация имиджевых
-											мероприятий на протяжении пяти лет.</p>
+											style="font-size:1rem; line-height: 120%;">Cooperation with JSC "Caspian Pipeline Consortium-K“ within last five years includes - information support, printing of corporate publications, photo and video support, production and organization of image events.</b></p>
 									<img src="./assets/images/ktk-1.jpg" alt=""><br><br>
 									<img src="./assets/images/ktk-2.jpg" alt="">
 								</div>
@@ -618,8 +611,7 @@
 							<svg>
 								<use xlink:href="#minus_circled"></use>
 							</svg>
-							<div class="accordeon_heading"><b>03</b> <b>Сотрудничество с компанией "Shell
-									Kazakhstan"</b></div>
+							<div class="accordeon_heading"><b>03</b> <b>Cooperation with "Shell Kazakhstan"</b></div>
 						</div>
 
 						<div class="b">
@@ -628,10 +620,9 @@
 
 							<div class="half_width">
 								<div class="t">
-									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">История</p>
+									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">History</p>
 									<p style="background: #f7f7f7; border-radius: 4px; padding: 1rem;">
-										<b style="font-size:1rem; line-height: 120%;">Сотрудничество с компанией "Shell
-											Kazakhstan" сопровождение участия компании на выставке EXPO 2017
+										<b style="font-size:1rem; line-height: 120%;">Cooperation with "Shell Kazakhstan"  - company support of the company's participation at EXPO 2017</b>
 									</p>
 									<img src="./assets/images/shell-1.jpg" alt="">
 								</div>
@@ -647,8 +638,7 @@
 							<svg>
 								<use xlink:href="#minus_circled"></use>
 							</svg>
-							<div class="accordeon_heading"><b>04</b> <b>Проведение ежегодного турнира по
-									мини-футболу</b></div>
+							<div class="accordeon_heading"><b>04</b> <b>Organization and perfoemance of the annual mini-football tournament</b></div>
 						</div>
 
 						<div class="b">
@@ -657,10 +647,9 @@
 
 							<div class="half_width">
 								<div class="t">
-									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">История</p>
+									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">History</p>
 									<p style="background: #f7f7f7; border-radius: 4px; padding: 1rem;">
-										<b style="font-size:1rem; line-height: 120%;">Проведение ежегодного турнира по
-											мини-футболу среди команд государственных органов нефтегазовых компаний
+										<b style="font-size:1rem; line-height: 120%;">Organization and perfoemance of the annual mini-football tournament among the teams of state bodies of the oil and gas companies</b>
 									</p>
 									<div style="max-width: 500px; margin: 0 auto;">
 										<video width="500" height="300" controls="controls"
@@ -683,8 +672,7 @@
 							<svg>
 								<use xlink:href="#minus_circled"></use>
 							</svg>
-							<div class="accordeon_heading"><b>05</b> <b>Впервые на территории СНГ проведено
-									интерактивное шоу «По городам Казахстана» </b></div>
+							<div class="accordeon_heading"><b>05</b> <b>For the first time on the territory of the CIS, an interactive show «Around the cities of Kazakhstan» </b></div>
 						</div>
 
 						<div class="b">
@@ -693,15 +681,9 @@
 
 							<div class="half_width">
 								<div class="t">
-									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">История</p>
+									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">History</p>
 									<p style="background: #f7f7f7; border-radius: 4px; padding: 1rem;">
-										<b style="font-size:1rem; line-height: 120%;">Впервые на территории СНГ
-											проведено интерактивное шоу «По городам Казахстана» с использованием
-											современных светопроекционных технологий. Проект был реализован по заказу АО
-											«КазТрансОйл» и получил высокую оценку Премьер-Министра РК Аскара Мамина.
-											Также шоу подтвердило свою уникальность и команда авторов проекта получила
-											престижные награды на международных конкурсах за уникальность и креативный
-											подход.
+										<b style="font-size:1rem; line-height: 120%;">For the first time on the territory of the CIS, an interactive show «Around the cities of Kazakhstan» was held using modern light projection technologies. The project was implemented by order of KazTransOil JSC and was highly appreciated by the Prime Minister of the Republic of Kazakhstan Askar Mamin. The show also confirmed its uniqueness and the authors team received prestigious awards at international competitions for uniqueness and creative approach.</b>
 									</p>
 									<div style="max-width: 500px; margin: 0 auto;">
 										<video width="500" height="300" controls="controls"
@@ -724,8 +706,7 @@
 							<svg>
 								<use xlink:href="#minus_circled"></use>
 							</svg>
-							<div class="accordeon_heading"><b>05</b> <b>Cотрудничества с Astana International
-									Exchange </b></div>
+							<div class="accordeon_heading"><b>06</b> <b>As part of our cooperation with Astana International Exchange</b></div>
 						</div>
 
 						<div class="b">
@@ -734,22 +715,17 @@
 
 							<div class="half_width">
 								<div class="t">
-									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">История</p>
+									<p style="font-size:2rem; line-height: 110%; padding-top:1.5rem;">History</p>
 									<p style="background: #f7f7f7; border-radius: 4px; padding: 1rem;">
-										<b style="font-size:1rem; line-height: 120%;">В рамках сотрудничества с Astana
-											International
-											Exchange мы оказали услуги по сопровождению
-											онлайн-форума Capital Markets Forum. Это был
-											интересный проект, мы получили массу
-											положительных впечатлений от работы с командой
-											AIX и спикерами мероприятия.
+										<b style="font-size:1rem; line-height: 120%;">As part of our cooperation with Astana International Exchange
+											Exchange we provided support services for the online forum - Capital Markets Forum. It was an interesting project, we got a lot of positive impressions from working with the AIX team and speakers of the event.</b>
 									</p>
 									<span style="margin-right: 20px; font-size: 14px;"><a
 											href="https://www.instagram.com/tv/CCnGwAFH-2R/?igshid=1a0cc1k8khzl6"
-											target="_blank">Перейти в инстаграм >>></a></span>
+											target="_blank">Go to Instagram >>></a></span>
 									<span style="font-size: 14px;"><a
 											href="https://www.instagram.com/tv/CCpzulPHsrK/?igshid=149mu2ag2xa1s"
-											target="_blank">Перейти в инстаграм >>></a></span>
+											target="_blank">Go to Instagram >>></a></span>
 								</div>
 							</div>
 						</div>
